@@ -1,6 +1,6 @@
 Interphase Module Reference
 
-The module adds interface panel functionality to a Pygame application. It was developed as a simple GUI with the goal to simulate a digital display panel. The module provides interface and control objects to design a panel, and numerous methods to manage the panel from the application code. Run interphase.py separately for an interface panel demo that is coded in demo.py.
+The module adds interface panel functionality to a Pygame application. It was developed as a simple GUI with the goal to simulate a digital display panel. The module provides interface and control objects to design a panel, and numerous methods to manage the panel from the application code. Run run_demo.py separately for an interface panel demo that is coded in tests/demo.py.
 
 The module requires Python 2.5+ (http://www.python.org/) and Pygame 1.8+ (http://www.pygame.org/). Interphase module is also functional with PyJ2D (http://gatc.ca/projects/pyj2d/) and Pyjsdl (http://gatc.ca/projects/pyjsdl/) frameworks. The Interphase.init() and Interphase.get_init() methods are available for initialization of the alternate frameworks.
 
