@@ -1,0 +1,6 @@
+#!/usr/bin/env python
+
+from tests import demo
+
+demo.main()
+
