@@ -4,6 +4,7 @@
 -update interface.set_panel_display to ensure display updates.
 -update interface.move to properly access panel size.
 -revise with absolute import statements.
+-revise module structure.
 
 0.87    2015-04-12
 -update Text.tprint to use rendered character cache.
